Tentative correction iPhone 2

--- a/style.css
+++ b/style.css
@@ -90,30 +90,14 @@
 @keyframes menu {
   0% {
     transform: translateY(10px);
+    -webkit-transform: translateY(10px);
+    -moz-transform: translateY(10px);
     opacity: 0;
   }
   100% {
     transform: translateY(0px);
-    opacity: 1;
-  }
-}
-@-moz-keyframes menu {
-  0% {
-    transform: translateY(10px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0px);
-    opacity: 1;
-  }
-}
-@-webkit-keyframes menu {
-  0% {
-    transform: translateY(10px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0px);
+    -webkit-transform: translateY(0px);
+    -moz-transform: translateY(0px);
     opacity: 1;
   }
 }
